# cpp_template

./: CMakeLists.txt  build_and_compile.sh  main.cpp
